# CodeRefactorer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  submodules.init.txt
cmake/: ezlibs.cmake
src/: refactorer.cpp  refactorer.h
src/interfaces/: IRefactorer.h
src/refactorers/: virtual_to_override.cpp  virtual_to_override.h
